# app-jsc-translator-be

./: .gitignore  Dockerfile  LICENSE.md  README.md  app.py  buildspec.yml  ci.yml  iam-policy.json  lamda_function.py  requirements.txt  run_tests.sh
.github/workflows/: CI.yml  build-test.yaml  build.yaml  codeql.yaml  infra-setup.yml  main.yml
Lambda/: .dockerignore  Dockerfile
Lambda/translate/: __init__.py  handler.py  pyproject.toml  requirements.txt
Lambda/translate/src/translate/: app.py  run.py
Lambda/translate/src/translate/manage_globals/: main.py
Lambda/translate/src/translate/templates/: index.html
Lambda/translate/src/translate/tests/: test_translator.py  test_translator.py.tpl
Lambda/translate/tests/: test_translator.py
application/: run.py
application/manage_globals/: main.py
application/templates/: index.html
application/tests/: test_translator.py
aws/: credentials
ci/configs/: pipeline-config.json  variables.tfvars.tpl
ci/scripts/: aws-terraform-generic.sh  aws-terraform.py  build-all-poetry-projects.sh  build-and-push-all-lambdas.py  build-and-push-lambda-image.sh  build-poetry-project.sh  generate_tfvars.sh
terraform/bootstrap/single-account/: bootstrap.sh  state.tf  state.tf.template  variables.tf
terraform/bootstrap/single-account/dev/: .tfstate.backup
terraform/environments/test/: main.tf  state.tf  variables.tf  versions.tf
